@@ -1,3 +1,7 @@
+2006-10-18  David Kastrup  <dak@gnu.org>
+
+	* preview.el (preview-parse-messages): Fix bad regexp.
+
 2006-10-16  David Kastrup  <dak@gnu.org>
 
 	* preview.el (preview-parse-messages): Rearrange the regexp for
